--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,7 +14,11 @@ spring:
         show-sql: true
         properties:
             hibernate:
-                dialect: org.hibernate.dialect.MySQL8Dialect    
+                dialect: org.hibernate.dialect.MySQL8Dialect  
+
+    mvc:
+        servlet:
+            path: /api/v1  
 
 
 
