--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,7 +42,8 @@ springdoc:
     path: /v3/api-docs        
   swagger-ui:
     path: /swagger-ui.html    
-  packages-to-scan: cm.backend.ecommerce.controllers
+  packages-to-scan: 
+        - cm.backend.ecommerce.controllers
 
 
 
